[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/win_area.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 48, 3, 1 )

[node name="WinArea" type="Area"]
collision_layer = 1024
collision_mask = 2
script = ExtResource( 1 )
next_level_path = "res://scenes/levels/level2.tscn"

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="." to="." method="on_player_entered"]
[connection signal="body_exited" from="." to="." method="on_player_exited"]
[connection signal="timeout" from="Timer" to="." method="on_timer_timeout"]
